--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,18 @@ body {
 	background: #f9f9f9;
 }
 
-div {
+.rules { padding: 15px 0}
+.rules h2 { margin: 0; }
+
+div, canvas {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	-ms-box-sizing: border-box;
 }
 
 #game {
-	width: 505px;
 	margin: 0 auto;
-	box-shadow: 0 0 8px #ccc;
+	box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
 
 #score,
@@ -30,7 +31,6 @@ div {
 	margin-bottom: -40px;
 	line-height: 1;
 	padding: 10px 20px 0 0;
-	text-transform: uppercase;
 	text-align: right;
 }
 
