--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ div, canvas, aside {
 	padding: 10px 5px;
 	border-radius: 4px;
 	border: 1px solid #eee;
-	right: 20px;
+	left: 20px;
 	top: 150px;
 	width: 88px;
 	background: #fff;
